Add more detailed documentation