@@ -18,14 +18,68 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
- * Strategy that performs multi-model classification with configurable decision aggregation.
+ * Multi-model classification strategy with configurable decision aggregation mechanisms.
  * <p>
- * Executes classification across multiple models and aggregates results using:
- * - MAJORITY_VOTE: selects the most frequently predicted label
- * - CONFIDENCE_WEIGHTED: selects based on summed confidence scores
- * - PRIORITY_ORDER: selects based on a predefined priority list
- * <p>
- * Supports both structured JSON responses and plain text responses.
+ * This strategy queries multiple classification models and aggregates their predictions
+ * using various decision types to produce a final classification. It supports ensemble
+ * learning approaches that can improve robustness and accuracy over single-model predictions.
+ *
+ * <h2>Classification Process</h2>
+ * <pre>
+ * Input: Question & Answer
+ *    ↓
+ * Model 1 → Prediction A (confidence: 0.8)
+ * Model 2 → Prediction B (confidence: 0.6)
+ * Model 3 → Prediction A (confidence: 0.9)
+ *    ↓
+ * Decision Aggregation (based on DecisionType)
+ *    ↓
+ * Output: Final Classification
+ * </pre>
+ *
+ * <h2>Decision Types</h2>
+ * <ul>
+ *   <li><b>MAJORITY_VOTE</b>: Selects the most frequently predicted label
+ *       <ul>
+ *         <li>Simple democratic voting across models</li>
+ *         <li>Effective when models are equally reliable</li>
+ *         <li>Handles ties by applying fallback decision type</li>
+ *       </ul>
+ *   </li>
+ *   <li><b>CONFIDENCE_WEIGHTED</b>: Selects label with highest summed confidence scores
+ *       <ul>
+ *         <li>Weights predictions by model confidence</li>
+ *         <li>Useful when models provide calibrated confidence scores</li>
+ *         <li>Handles ties by applying fallback decision type</li>
+ *       </ul>
+ *   </li>
+ *   <li><b>PRIORITY_ORDER</b>: Selects based on predefined priority list
+ *       <ul>
+ *         <li>Uses configured priority order to break ties</li>
+ *         <li>Allows encoding domain knowledge about label importance</li>
+ *         <li>Falls back to first available prediction if no match</li>
+ *       </ul>
+ *   </li>
+ * </ul>
+ *
+ * <h2>Fallback Mechanism</h2>
+ * If the primary decision type results in a tie (multiple labels with equal scores),
+ * the strategy automatically applies the fallback decision type to resolve the ambiguity.
+ *
+ * <h2>Use Cases</h2>
+ * <ul>
+ *   <li>Ensemble learning to improve classification accuracy</li>
+ *   <li>Combining models with different strengths (e.g., speed vs. accuracy)</li>
+ *   <li>Robust classification by reducing single-model biases</li>
+ *   <li>A/B testing multiple model configurations</li>
+ * </ul>
+ *
+ * <h2>Performance Considerations</h2>
+ * This strategy makes N API calls (where N = number of models). Consider costs
+ * and latency when configuring multiple models.
+ *
+ * @see DecisionType
+ * @see ClassificationResult
  */
 @Node(label = "MultiStrategy")
 @Getter
@@ -34,27 +88,53 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 @Builder
 public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
+    /**
+     * List of model configurations to query for classification.
+     * Each model is queried independently and results are aggregated.
+     */
     @JsonProperty("models")
     @JsonPropertyDescription("The model configurations to use for classification.")
     private List<ModelProperties> models;
 
+    /**
+     * Primary decision type for aggregating model predictions.
+     * Applied first to determine the final classification.
+     */
     @JsonProperty("decision-type")
     @JsonPropertyDescription("The decision type to aggregate model results.")
     private DecisionType decisionType = DecisionType.MAJORITY_VOTE;
 
+    /**
+     * Fallback decision type used when primary decision results in a tie.
+     * Ensures a deterministic final decision even in ambiguous cases.
+     */
     @JsonProperty("fallback-decision-type")
     @JsonPropertyDescription("The fallback decision type to use if the primary decision type cannot produce a result.")
     private DecisionType fallbackDecisionType = DecisionType.PRIORITY_ORDER;
 
+    /**
+     * Priority order of labels for PRIORITY_ORDER decision type.
+     * Labels appearing earlier in the list are preferred in case of ties.
+     */
     @JsonProperty("priority-order")
     @JsonPropertyDescription("The priority order of labels for PRIORITY_ORDER decision type.")
     private List<String> priorityOrder = new ArrayList<>();
 
     /**
-     * Execute the multi-model classification with decision aggregation.
+     * Executes multi-model classification with decision aggregation.
+     * <p>
+     * Workflow:
+     * <ol>
+     *   <li><b>Collect Results</b>: Query all configured models in parallel</li>
+     *   <li><b>Apply Primary Decision</b>: Use primary decision type to filter/rank results</li>
+     *   <li><b>Check Uniqueness</b>: If single winner, return immediately</li>
+     *   <li><b>Apply Fallback</b>: If tie, use fallback decision type</li>
+     *   <li><b>Return Final Result</b>: Return first result from filtered set</li>
+     * </ol>
      *
-     * @param request the classification request containing text and taxonomy.
-     * @return a ClassificationResult representing the aggregated prediction.
+     * @param request the classification request with question, answer, and taxonomy
+     * @return aggregated classification result
+     * @throws IllegalStateException if no valid decision can be made after fallback
      */
     @Override
     public ClassificationResult execute(ClassificationRequest request) {
@@ -63,7 +143,7 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
         // Apply primary decision type
         List<ClassificationResult> filteredResults = applyDecisionType(results, decisionType);
         if (hasUniqueResult(filteredResults)) {
-            return filteredResults.getFirst();
+            return filteredResults.get(0);
         }
 
         // Apply fallback decision type
@@ -82,6 +162,11 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
 
     /**
      * Collects classification results from all configured models.
+     * <p>
+     * Executes requests to all models and collects their predictions.
+     *
+     * @param request the classification request
+     * @return list of classification results from all models
      */
     private List<ClassificationResult> collectModelResults(ClassificationRequest request) {
         return models.stream()
@@ -90,7 +175,17 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Executes a single model request and returns the classification result.
+     * Executes a classification request for a single model.
+     * <p>
+     * Handles both JSON and plain text response formats:
+     * <ul>
+     *   <li>JSON_OBJECT: Deserializes to ClassificationResult</li>
+     *   <li>Plain text: Creates ClassificationResult with label only</li>
+     * </ul>
+     *
+     * @param request the classification request
+     * @param model the model configuration to use
+     * @return classification result from the model
      */
     private ClassificationResult executeModelRequest(ClassificationRequest request, ModelProperties model) {
         String prompt = buildPrompt(request, model);
@@ -104,7 +199,14 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Builds the prompt for a specific model.
+     * Builds the appropriate prompt for a specific model.
+     * <p>
+     * For LocalClient: Serializes the entire request object.
+     * For remote clients: Uses PromptUtils to build formatted prompt.
+     *
+     * @param request the classification request
+     * @param model the model configuration
+     * @return formatted prompt string
      */
     private String buildPrompt(ClassificationRequest request, ModelProperties model) {
         return switch (model.getClient()) {
@@ -118,7 +220,14 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Applies the specified decision type to the results.
+     * Applies the specified decision type to aggregate and filter results.
+     * <p>
+     * Returns a filtered list containing only the top-scoring result(s) according
+     * to the decision type logic. May return multiple results if there's a tie.
+     *
+     * @param results list of classification results from models
+     * @param type the decision type to apply
+     * @return filtered list of top result(s)
      */
     private List<ClassificationResult> applyDecisionType(
             List<ClassificationResult> results,
@@ -133,7 +242,10 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Checks if all results have the same label.
+     * Checks if all filtered results have the same label (no tie).
+     *
+     * @param results filtered results
+     * @return true if all results have identical labels
      */
     private boolean hasUniqueResult(List<ClassificationResult> results) {
         return results.stream()
@@ -143,8 +255,13 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Selects results based on majority vote.
-     * Returns all results with the most common label(s).
+     * Implements majority vote decision: selects label(s) with highest frequency.
+     * <p>
+     * Counts how many models predicted each label and returns all results
+     * matching the most frequent label(s).
+     *
+     * @param results list of classification results
+     * @return results with most frequently predicted label(s)
      */
     private List<ClassificationResult> majorityVote(List<ClassificationResult> results) {
         Map<String, Long> counts = results.stream()
@@ -161,8 +278,13 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Selects results based on summed confidence scores.
-     * Returns all results with the highest confidence sum(s).
+     * Implements confidence-weighted decision: selects label(s) with highest summed confidence.
+     * <p>
+     * Sums confidence scores per label across all models and returns results
+     * matching the label(s) with highest total confidence.
+     *
+     * @param results list of classification results
+     * @return results with highest confidence sum(s)
      */
     private List<ClassificationResult> confidenceVote(List<ClassificationResult> results) {
         Map<String, Double> confidenceSums = results.stream()
@@ -181,8 +303,16 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Generic method to filter results by top score.
-     * Returns all results whose label has the maximum score.
+     * Generic method to filter results based on top score(s).
+     * <p>
+     * Returns all results whose label achieved the maximum score.
+     * Used by both majorityVote and confidenceVote.
+     *
+     * @param results list of classification results
+     * @param scores map of label to score
+     * @param maxScore the maximum score value
+     * @param <T> numeric type of the score
+     * @return results matching the top score
      */
     private <T extends Number> List<ClassificationResult> filterResultsByTopScore(
             List<ClassificationResult> results,
@@ -201,8 +331,13 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Selects result based on predefined priority order.
-     * Returns the first result matching the priority list, or the first available result.
+     * Implements priority order decision: selects first result matching priority list.
+     * <p>
+     * Iterates through the configured priority order and returns the first result
+     * whose label matches. Falls back to first available result if no match found.
+     *
+     * @param results list of classification results
+     * @return result matching highest priority, or first available result
      */
     private ClassificationResult priorityOrder(List<ClassificationResult> results) {
         return priorityOrder.stream()
@@ -214,19 +349,24 @@ public class MultiStrategy extends Neo4jNode implements ClassificationStrategy {
     }
 
     /**
-     * Decision types for aggregating multi-model classification results.
+     * Enumeration of decision types for aggregating multi-model classification results.
      */
     public enum DecisionType {
         /**
-         * Select based on most frequent prediction
+         * Select label based on most frequent prediction across models.
+         * Treats all models equally regardless of confidence.
          */
         MAJORITY_VOTE,
+
         /**
-         * Select based on highest summed confidence scores
+         * Select label based on highest summed confidence scores.
+         * Weights predictions by model-reported confidence values.
          */
         CONFIDENCE_WEIGHTED,
+
         /**
-         * Select based on predefined priority order
+         * Select label based on predefined priority order.
+         * Uses configured priority list to resolve ambiguity.
          */
         PRIORITY_ORDER
     }
